--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -4,7 +4,10 @@ body, html {
 }
 div[ng-controller="MessageController"] {
     nav {
-        float: right;
+        position: fixed;
+        top: 10;
+        // float: right;
+        left: 70%;
         width: 30%;
         box-sizing: border-box;
 
@@ -13,61 +16,104 @@ div[ng-controller="MessageController"] {
             margin: 0;
             padding: 0;
             li {
-                border: solid 1px #ccc;
+                font: 9pt 'Lucida Grande';
                 padding: 0.5em;
                 margin: 10px 10px 10px 0;
 
+                a {
+                    color: #333;
+                }
+                border-left: solid 3px #eee;
                 &.active {
-                    background: red;
+                    border-left: solid 3px red;
                 }
             }
         }
+
+        input[type="submit"] {
+            visibility: hidden;
+        }
     }
+
+    @form-textarea-height: 50px;
+    @form-submit-width: 60px;
+
     section {
         width: 70%;
         box-sizing: border-box;
-    }
-    form {
-        margin: 0;
-        background: #ddd;
-        padding: 10px 80px 10px 10px;
-        box-sizing: border-box;
-        width: 100%;
-        position: fixed;
-        bottom: 0;
-        border-top: solid 1px #666;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.25);
-
-        textarea {
+    
+        form {
             margin: 0;
-            width: 100%;
+            background: #ddd;
+            padding: 10px (@form-submit-width + 20px) 10px 10px;
             box-sizing: border-box;
-            height: 50px;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            resize: none;
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+            border-top: solid 1px #666;
+            line-height: 0;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.25);
+
+            textarea {
+                margin: 0;
+                width: 100%;
+                box-sizing: border-box;
+                height: @form-textarea-height;
+                white-space: pre-wrap;
+                word-wrap: break-word;
+                resize: none;
+            }
+
+            input[type="submit"] {
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: @form-submit-width;
+                margin: 10px;
+            }
         }
 
-        input[type="submit"] {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 60px;
-            margin: 10px;
+        @-webkit-keyframes fade-in {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
-    }
 
-    ul.messages {
-        list-style-type: none;
-        padding: 10px;
-        margin: 0 0 76px 0;
+        ul.messages {
+            list-style-type: none;
+            padding: 10px;
+            margin: 0 0 (@form-textarea-height + 20px + 1px) 0;
 
-        li {
-            line-height: 150%;
-            border-bottom: solid 1px #eee;
-            padding: 0.5em 0.5em;
-            font-family: 'Lucida Grande';
-            font-size: 9pt;
+            li {
+                line-height: 150%;
+                border-bottom: solid 1px #eee;
+                padding: 0.5em 0.5em;
+                font: 9pt 'Lucida Grande';
+                
+                -webkit-animation-name: fade-in;
+                -webkit-animation-duration: 0.5s;
+
+                &.self {
+                    background-color: #fbfbf2;
+                }
+
+                @data-width: 110px;
+                span.id {
+                    width: @data-width;
+                    margin-right: 10px;
+                    float: left;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    display: block;
+                }
+                span.data {
+                    white-space: pre-wrap;
+                    margin-left: (@data-width + 10px);
+                    display: block;
+                    border-left: solid 1px #eee;
+                    padding-left: 10px;
+                }
+            }
         }
     }
 }
