--- a/views/index.jade
+++ b/views/index.jade
@@ -72,7 +72,8 @@ block content
   div(ng-controller="MessageController")
     nav
       form(ng-submit="createChannel()")
-        input(type='text', ng-model='channel')
+        label(for='channel') Channel:
+        input(type='text', ng-model='channel', name='channel')
         input(type="submit", value="create")
 
       ul.channels
