--- a/views/index.jade
+++ b/views/index.jade
@@ -60,40 +60,17 @@ block head
         }
         $scope.data = '';
       };
-    }).directive('scroll', function() {
+    }).directive('scrollTo', function() {
       return {
         link: function(scope, element, attrs, ctrl) {
-          $('html, body').scrollTop($(element).offset().top);
+          element = $(element);
+          element.parent().scrollTop($(element).offset().top);
         }
       }
-    });
-
-block content
-  div(ng-controller="MessageController")
-    nav
-      form(ng-submit="createChannel()")
-        label(for='channel') Channel:
-        input(type='text', ng-model='channel', name='channel')
-        input(type="submit", value="create")
-
-      ul.channels
-        li(ng-repeat="(channel, _) in messages", ng-class="{ active:isChannel(channel) }")
-          a(ng-click="setChannel(channel)") {{ channel }}
-    section
-      ul.messages
-        li(ng-repeat="message in messages[channel]", ng-class="{ self:isSelf(message) }", scroll)
-          span.id {{ message.id }}
-          span.data {{ message.data }}
-
-      form(ng-submit="send()")
-        textarea#message(type="text", ng-model="data", size=30)
-        input(type="submit", value="send")
-
-        script(type='text/javascript')
-          $('script').
-            last().
-            parent('form').
-            children('textarea').
+    }).directive('bindEnter', function() {
+      return {
+        link: function(scope, element, attrs, ctrl) {
+          $(element).children('textarea').
             keypress(function(event)
             {
               if (event.which == 13 && !event.ctrlKey)
@@ -102,3 +79,41 @@ block content
                 event.preventDefault();
               }
             });
+        }
+      }
+    });
+
+block content
+  table(ng-controller="MessageController")
+    tr
+      td.header
+        ul
+          li hello
+          li there
+
+      td.channels(rowspan=3)
+        div.scroll-pane
+          div
+            form(ng-submit="createChannel()")
+              label(for='channel') Channel:
+              input(type='text', ng-model='channel', name='channel')
+              input(type="submit", value="create")
+
+            ul
+              li(ng-repeat="(channel, _) in messages", ng-class="{ active:isChannel(channel) }")
+                a(ng-click="setChannel(channel)") {{ channel }}
+
+    tr
+      td.messages
+        div.scroll-pane
+          div
+            ul
+              li(ng-repeat="message in messages[channel]", ng-class="{ self:isSelf(message) }", scroll-to)
+                span.id {{ message.id }}
+                span.data {{ message.data }}
+
+    tr
+      td.message
+        form(ng-submit="send()", bind-enter)
+          textarea#message(type="text", ng-model="data", size=30)
+          input(type="submit", value="send")
